# LLM-Law-Stanford-python

./: README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
data/: web_articles.csv  web_articles_local.csv
src/: main.ipynb
src/Web/: keyword.py  scrape.py
