[tool.poetry]
name = "llm-law-stanford"
version = "0.1.0"
description = ""
authors = ["shoot649854 <jojoto8845@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
hugchat = "^0.4.1"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
